--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -32,7 +32,7 @@ h1 {
     max-width: 320px;
     width: 100%;
     position: absolute;
-    bottom: -25%;
+    bottom: -9%;
 }
 
 .hero .overlay {
@@ -169,7 +169,7 @@ h1 {
 
 .content-section {
     padding: 120px 20px;
-    background-color: #935ea6;
+    /* background-color: #935ea6; */
 }
 
 .section-title {
