--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="page-scroll" href="#page-top"><img style="max-width: 200px; height: auto;" src="{{site.baseurl}}/img/logos/sarahlogoinverted.png" alt=""></a>
+                <a class="page-scroll" href="#page-top"><img style="max-width: 200px; height: auto;" src="{{site.baseurl}}/img/logos/Revised SARAIH Logo Inverted.png" alt=""></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,14 +19,14 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">SARAH APP</a>
+                        <a class="page-scroll" href="#services">SARAIH APP</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#science-first">Science</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#about-us">About Us</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#team">For Investors</a>
                     </li>
@@ -58,7 +58,7 @@
             <div class="img-container bg-center fifty sm-hundred relative" style="background-image: url('{{site.baseurl}}/img/aaron-burden-bg-cropped.jpg');">
                 <div class="overlay absolute sm-block full hundred"></div>
                 <div class="absolute z-index-1 hero-title">
-                    <h1>Your Personal Guide Through Mental Wellness</h1>
+                    <h1>Uplift Loved Ones on Their Mental Health Wellness Journey</h1>
                     <div class="buttons-container">
                         <a class="btn" href="#">Download for iOS</a>
                         <a class="btn" href="#">Download for Android</a>
@@ -68,7 +68,7 @@
             <div class="text-container fifty sm-hundred">
                 <div class="inner height-100 justify-center flex z-index-1 relative animated fadeInRight" data-animation="fadeInRight">
                     <div class="floating-logo">
-                        <img class="head-logo" src="{{site.baseurl}}/img/mobile-app-splash.png" alt="">
+                        <img class="head-logo" src="{{site.baseurl}}/img/Mobile Phone Mockup.png" alt="">
                     </div>
                 </div>
             </div>
