--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,30 +3,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About SARAH: Empowering Lives Through Compassionate Technology</h2>
-                    <!-- <h3 class="section-subheading text-muted">About SARAH: Empowering Lives Through Compassionate Technology</h3> -->
+                    <h2 class="section-heading">About SAR<span style="color: #8c52ff">AI</span>H: Empowering Lives Through Compassionate Technology</h2>
+                    <!-- <h3 class="section-subheading text-muted">About SAR<span style="color: #8c52ff">AI</span>H: Empowering Lives Through Compassionate Technology</h3> -->
                 </div>
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <p class="large text-muted">
-                            SARAH was created to bridge the gap between those living with suicide ideation and the
+                            SAR<span style="color: #8c52ff">AI</span>H was created to bridge the gap between those living with suicide ideation and the
                             compassionate support they deserve. We believe that everyone has the right to live a life of
                             purpose and fulfillment, even in the face of mental health challenges.
                         </p>
                         <p class="large text-muted">
                             Our app uses cutting-edge technology to assess your unique situation and deliver personalized
-                            support tools that meet your needs. SARAH isn't just about managing suicidal thoughts; it's
+                            support tools that meet your needs. SAR<span style="color: #8c52ff">AI</span>H isn't just about managing suicidal thoughts; it's
                             about empowering you to live well and thrive, even in the midst of struggle.
                         </p>
                         <p class="large text-muted">
-                            With SARAH, you're not alone. We're here to help you navigate your journey, providing the
+                            With SAR<span style="color: #8c52ff">AI</span>H, you're not alone. We're here to help you navigate your journey, providing the
                             support and resources you need to find healing and resilience.
                         </p>
                     </div>
                 </div>
                 <!-- <div>
                     <p>
-                        Take control of your mental health with SARAH and discover the strength within you.
+                        Take control of your mental health with SAR<span style="color: #8c52ff">AI</span>H and discover the strength within you.
                     </p>
                 </div> -->
             </div>
