--- a/_includes/science-first.html
+++ b/_includes/science-first.html
@@ -1,18 +1,18 @@
 <section  id="science-first" class="split-section section-padding">
     <div class="image-container fifty sm-hundred">
-        <img class="img-dimensions" src="https://via.placeholder.com/600x400" alt="Placeholder Image">
+        <img class="img-dimensions" src="{{site.baseurl}}/img/Heart Phone.jpg" alt="Placeholder Image">
     </div>
     <div class="fifty sm-hundred">   
         <div class="text-container">
             <h2>The Science Behind the App</h2>
             <p class="large text-muted">
-                Through a series of thoughtful questions and advaned algorithms, SARAH identifies where individuals are in their journye 
+                Through a series of thoughtful questions and advaned algorithms, SAR<span style="color: #8c52ff">AI</span>H identifies where individuals are in their journye 
                 and delivers a customized wellness plan with practical coping strategies and tools that adapt to your journey. 
                 It's not about fixing or easing those feelings, but about providing the tools to manage them and find 
                 moments of peace. 
             </p>
             <p class="large text-muted">
-                SARAH also offers a support plan for a champion-someone close to the individual who can walk alongside them,
+                SAR<span style="color: #8c52ff">AI</span>H also offers a support plan for a champion-someone close to the individual who can walk alongside them,
                 offering guidance and care. This dual approach ensures no one has to face the struggle alone. 
             </p>
         </div>
