--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">For Investors</h2>
-                    <h3 class="section-subheading text-muted">Invest in SARAH: The Future of Mental Health Care</h3>
+                    <h3 class="section-subheading text-muted">Invest in SAR<span style="color: #8c52ff">AI</span>H: The Future of Mental Health Care</h3>
                 </div>
             </div>
             <div class="row">          
@@ -12,19 +12,19 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">
-                        Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge
+                        Join us in revolutionizing mental health care with SAR<span style="color: #8c52ff">AI</span>H, the app that combines cutting-edge
                         technology with compassionate care to support individuals living with suicide ideation. Our
                         unique approach assesses user needs with advanced algorithms and delivers personalized support
                         that adapts to their journey.
                     </p>
                     <p class="large text-muted">
-                        By investing in SARAH, you are backing a solution that addresses a critical need in mental
+                        By investing in SAR<span style="color: #8c52ff">AI</span>H, you are backing a solution that addresses a critical need in mental
                         health care. Your support will help transform lives, setting a new standard in how we approach
-                        mental wellness. With SARAH, you're not just investing in technology; you're investing in hope,
+                        mental wellness. With SAR<span style="color: #8c52ff">AI</span>H, you're not just investing in technology; you're investing in hope,
                         resilience, and a brighter future for those who need it most.
                     </p>
                     <p class="large text-muted">
-                        Be part of the change. Invest in SARAH today.
+                        Be part of the change. Invest in SAR<span style="color: #8c52ff">AI</span>H today.
                     </p>
                 </div>
             </div>
