--- a/_includes/who_is_sarah_for.html
+++ b/_includes/who_is_sarah_for.html
@@ -1,17 +1,27 @@
 <section class="content-section">
     <div class="text-center">
-        <h2 class="section-heading">Who is SARAH for?</h2>
+        <h2 class="section-heading">Who is SAR<span style="color: #8c52ff">AI</span>H for?</h2>
     </div> 
     <div class="columns">
         <div class="column">
             <img src="{{site.baseurl}}/img/sad-tree-girl.jpeg" alt="Image 1" class="column-image">
             <h2 class="column-title"><i>Individuals</i></h2>
-            <p class="column-description">Anyone struggling with suicidal thoughts, feeling trapped in a cycle of despair, and under the weight of ongoing stress.</p>
+            <p class="column-description">Anyone suffering from mental health and looking for help.</p>
         </div>
         <div class="column">
             <img src="{{site.baseurl}}/img/sad-girls.jpeg" alt="Image 2" class="column-image img-big">
-            <h2 class="column-title"><i>Champions</i></h2>
-            <p class="column-description">Close friends, family members, pastors, youth leaders, doctors, or any other person designated by an individual and acts as a "champion" to cheer them on and keep them accountable in their commitment to mental health wellness.</p>
+            <h2 class="column-title"><i>Personal Champions</i></h2>
+            <p class="column-description">Close friends, family members, doctors, or any other person who wants
+                to encourage their loved on suffering with mental health. 
+            </p>
+        </div>
+        <div class="column">
+            <img src="{{site.baseurl}}/img/pastor.jpg" alt="Image 3" class="column-image img-big">
+            <h2 class="column-title"><i>Church Champions</i></h2>
+            <p class="column-description">Pastors, counselors, or small group leaders could partner with us 
+                to use SAR<span style="color: #8c52ff">AI</span>H with their constituents and provide resources 
+                at the right time.
+            </p>
         </div>
     </div>
 </section>
