--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,15 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
-    {% include who_is_sarah_for.html %}
     {% include vimeo_video.html %}
+    {% include who_is_sarah_for.html %}
+    {% include champions_Gloo_page.html %}
     {% include science-first.html %}
-    {% include about-us.html %}
+    {% include services.html %}
+    <!-- {% include about-us.html %} -->
     {% include text_image.html %}
-    {% include image_text.html %}
-    {% include clients.html %}
+    <!-- {% include image_text.html %} -->
+    <!-- {% include clients.html %} -->
     {% include faq.html %}
     {% include contact.html %}
     {% include footer.html %}
