--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Stay in touch to keep up with the latest development of SARAH.</h3>
+                    <h3 class="section-subheading text-muted">Stay in touch to keep up with the latest development of SAR<span style="color: #8c52ff">AI</span>H.</h3>
                 </div>
             </div>
             <div class="row">
