--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,9 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">SARAH is more than just an app</h2>
-                    <h3 class="section-subheading text-muted">It's your companion in mental wellness. Designed specifically
-                        for individuals living with suicide ideation, SARAH offers:</h3>
+                    <h2 class="section-heading">Walking with you through the hard times.</h2>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-3">
@@ -14,7 +12,7 @@
                             <i class="fa-solid fa-arrows-to-eye fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Personalized Assessments</h4>
-                        <p class="text-muted">SARAH carefully assesses your mental state using a
+                        <p class="text-muted">SAR<span style="color: #8c52ff">AI</span>H carefully assesses your mental state using a
                             proprietary algorithm that understands your unique needs.</p>
                     </div>
                     <div class="col-md-3">
@@ -32,7 +30,7 @@
                             <i class="fa fa-screwdriver-wrench fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Adaptive Tools</h4>
-                        <p class="text-muted">SARAH evolves with you, providing tools and resources that adapt to
+                        <p class="text-muted">SAR<span style="color: #8c52ff">AI</span>H evolves with you, providing tools and resources that adapt to
                             your changing journey.</p>
                     </div>
                     <div class="col-md-3">
@@ -42,12 +40,12 @@
                         </span>
                         <h4 class="service-heading">Continuous Support</h4>
                         <p class="text-muted">Whether you need immediate comfort or long-term strategies for
-                            coping, SARAH is always there.</p>
+                            coping, SAR<span style="color: #8c52ff">AI</span>H is always there.</p>
                     </div>
                 </div>
                 <!-- <div>
                     <p>
-                        Take control of your mental health with SARAH and discover the strength within you.
+                        Take control of your mental health with SAR<span style="color: #8c52ff">AI</span>H and discover the strength within you.
                     </p>
                 </div> -->
             </div>
