--- a/_includes/text_image.html
+++ b/_includes/text_image.html
@@ -3,20 +3,29 @@
         <div class="text-container sm-order-2">
             <h2>For Investors</h2>
             <p class="large text-muted">
-                Join us in revolutionizing mental health care with SARAH, the app that combines cutting-edge technology with compassionate care to support individuals living with suicide ideation. Our unique approach assesses user needs with advanced algorithms and delivers personalized support that adapts to their journey.
+                Join us in revolutionizing mental health care with SAR<span style="color: #8c52ff">AI</span>H, the app that 
+                combines cutting edge technology 
+                with compassionate care to those suffering from mental health. Our unique approach is designed to uplift 
+                loved ones on their mental wellness journey and provide positive behavior changes. It utilizes advanced AI 
+                methodologies, neuroscience research and the collective network of resources from faith partners to provide 
+                champions with the right tools at the right time to help their loved ones.
             </p>
             <p class="large text-muted">
-                By investing in SARAH, you are backing a solution that addresses a critical need in mental health care. Your support will help transform lives, setting a new standard in how we approach mental wellness. With SARAH, you're not just investing in technology; you're investing in hope, resilience, and a brighter future for those who need it most.
+                By investing in SAR<span style="color: #8c52ff">AI</span>H, you are backing a solution that addresses a critical need in mental health care. 
+                Your support will help transform lives, setting a new standard in how we approach mental wellness. 
+                With SAR<span style="color: #8c52ff">AI</span>H, you're not just investing in technology; 
+                you're investing in hope, resilience, and a 
+                brighter future for those who need it most.            
             </p>
             <p class="large text-muted">
-                Be part of the change. Invest in SARAH today.
+                Be part of the change. Invest in SAR<span style="color: #8c52ff">AI</span>H today.
             </p>
             <a href="#contact" class="page-scroll btn btn-xl">Learn More</a>
         </div>    
     </div>
     
     <div class="image-container sm-order-1 fifty sm-hundred">
-        <img class="img-dimensions" src="{{ site.baseurl }}/img/matt-nelson-2Rb2I8TZ6O8-unsplash-min.jpg" alt="Placeholder Image">
+        <img class="img-dimensions" src="{{ site.baseurl }}/img/investor pic.jpg" alt="Placeholder Image">
         <!-- "{{ site.baseurl }}/img/favicon.ico" -->
     </div>
 </section>
