--- a/_includes/vimeo_video.html
+++ b/_includes/vimeo_video.html
@@ -1,10 +1,13 @@
 <section class="video-section section-padding" style="padding: 150px 0 0 0">
     <div class="text-center">
-        <h2 class="section-heading">We are not meant to go through hard times by ourselves.</h2>
+        <h2 class="section-heading">
+            Take the first step today with SAR<span style="color: #8c52ff">AI</span>H, becuase their life matters and you can discover the strength
+            within you to be a champion. 
+        </h2>
     </div>
-    <p class="video-description">Whatever you're going through, parnter with SARAH to find your internal strength and resilience.</p>
+    <!-- <p class="video-description">Whatever you're going through, parnter with SAR<span style="color: #8c52ff">AI</span>H to find your internal strength and resilience.</p> -->
     <div class="video-container">
-        <iframe src="https://player.vimeo.com/video/1007400785?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;left: 50%;transform: translateX(-50%);" title="PROJECT SARAH">
+        <iframe src="https://player.vimeo.com/video/1007400785?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;left: 50%;transform: translateX(-50%);" title="PROJECT SAR<span style="color: #8c52ff">AI</span>H">
         </iframe>
     </div>
     <script src="https://player.vimeo.com/api/player.js"></script>
