--- a/_includes/champions_Gloo_page.html
+++ b/_includes/champions_Gloo_page.html
@@ -1,4 +1,4 @@
-<section  id="portfolio" class="split-section">
+<section  id="portfolio" class="split-section" style="padding-top: 80px">
     <div class="image-container fifty sm-hundred">
         <img class="img-dimensions" src="{{ site.baseurl }}/img/friends.jpg" alt="Placeholder Image">
     </div>
