--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">SARAIH APP</a>
+                        <a class="page-scroll" href="#vimeo-video">SARAIH APP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#science-first">Science</a>
+                        <a class="page-scroll" href="#portfolio">Science</a>
                     </li>
                     <!-- <li>
                         <a class="page-scroll" href="#about-us">About Us</a>
