--- a/_includes/science-first.html
+++ b/_includes/science-first.html
@@ -1,7 +1,5 @@
-<section  id="science-first" class="split-section section-padding">
-    <div class="image-container fifty sm-hundred">
-        <img class="img-dimensions" src="{{site.baseurl}}/img/Heart Phone.jpg" alt="Placeholder Image">
-    </div>
+<section  id="science-first" class="split-section">
+    
     <div class="fifty sm-hundred">   
         <div class="text-container">
             <h2>The Science Behind the App</h2>
@@ -16,5 +14,8 @@
                 offering guidance and care. This dual approach ensures no one has to face the struggle alone. 
             </p>
         </div>
+    </div>
+    <div class="image-container fifty sm-hundred">
+        <img class="img-dimensions" src="{{site.baseurl}}/img/Heart Phone.jpg" alt="Placeholder Image">
     </div>
 </section>
