--- a/_includes/vimeo_video.html
+++ b/_includes/vimeo_video.html
@@ -1,7 +1,7 @@
 <section class="video-section section-padding" style="padding: 150px 0 0 0" id="vimeo-video">
     <div class="text-center">
         <h2 class="section-heading">
-            Take the first step today with SAR<span style="color: #8c52ff">AI</span>H, becuase their life matters and you can discover the strength
+            Take the first step today with SAR<span style="color: #8c52ff">AI</span>H, because their life matters and you can discover the strength
             within you to be a champion. 
         </h2>
     </div>
